include "public", "everyone", and "system". The public group represents all
client agents, everyone group represents all authenticated agents, and the
system group represents all agents connecting directly from the local machine.
http://code.google.com/p/callimachus/wiki/Security has more details.

= KNOWN ISSUES IN 0.18 =

 * All possible options in check boxes must have a label.
 * Trailing whitespace in @typeof attribute causes unexpected behaviour.
 * rdf:XMLLiteral on form create auto adds xmlns to elements.
 * When resource labels are updated, referencing resource may not display new
   label until they are modified as well or the callimachus-reset script is run.
 * Safari browser cannot view Turtle or RDF/XML output in describe tab.
 * Safari does not retain the login state in all cases.
 * Safari does not support dragging files in the folder view.
 * IE does not work with the article editor.

In some environments, Callimachus may log "An exception has occurred in the
compiler...FilePermission" exceptions. This is often due to an issue in the
embedded Java compiler and if so has no impact on the run time behaviour of
Callimachus.

= HOWTO UPGRADE FROM 0.17 =

All information saved through a Web browser is saved in the repositories
directory. This directory should be backed up (in the stopped state) before
attempting to upgrade.

Stop the 0.17 server using the callimachus-stop script in the bin directory.
Remove the lib, bin, tmp, src directories.

Download and unzip the callimachus-0.18.zip file in the install directory of
the Callimachus 0.17 instance. Run the bin/callimachus-setup.sh/.bat script to
upgrade the repositories directory. Run the bin/callimachus-start.sh/.bat script
to start Callimachus.

Every create template, that has a onsubmit="return calli.saveResourceAs(event)",
will need to be replaced with onsubmit="return calli.saveResourceAs(event,
calli.slugify($('#label').val()))" where "label" is the id of the
first input field in the form.
