@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>New Resource</h1>
-    <form method="POST" action="" enctype="application/rdf+xml"
+    <form method="POST" action="" enctype="application/rdf+xml" typeof=""
             onsubmit="return calli.saveResourceAs(event,calli.slugify($('#label').val()))">
         <fieldset>
             <div class="control-group">
